# mini-agent-go

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  agent.go  agent_test.go  go.mod
docs/superpowers/plans/: 2026-06-10-tv-list-aggregator.md  2026-06-10-tvlist-cursor-gui-redesign.md
examples/: examples.go
tv-list-aggregator/: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml
tv-list-aggregator/.github/workflows/: ci.yml
tv-list-aggregator/alembic/: env.py
tv-list-aggregator/alembic/versions/: 197491bccd3f_initial_schema.py
tv-list-aggregator/config/: legal_notice.md  sources.example.yaml
tv-list-aggregator/docs/: architecture.md  operations.md  security.md
tv-list-aggregator/scripts/: screenshot_gui.py
tv-list-aggregator/src/tv_list_aggregator/: __init__.py  main.py
tv-list-aggregator/src/tv_list_aggregator/core/: __init__.py  cache.py  exceptions.py  logging.py  settings.py  tracing.py  types.py
tv-list-aggregator/src/tv_list_aggregator/domain/: __init__.py
tv-list-aggregator/src/tv_list_aggregator/domain/models/: __init__.py  crawl_job.py  health.py  program.py  source.py  user.py  value_objects.py
tv-list-aggregator/src/tv_list_aggregator/domain/ports/: __init__.py  cache.py  clock.py  event_bus.py  fetcher.py  job_repository.py  llm.py  parser.py  program_repository.py  source_repository.py  user_repository.py
tv-list-aggregator/src/tv_list_aggregator/domain/services/: __init__.py  aggregation_service.py  auth_service.py  dedup_service.py  feedback_service.py  health_check_service.py  normalization_service.py  source_registry.py
tv-list-aggregator/src/tv_list_aggregator/infrastructure/: __init__.py
tv-list-aggregator/src/tv_list_aggregator/infrastructure/http/: __init__.py  client.py  playwright_fetcher.py
tv-list-aggregator/src/tv_list_aggregator/infrastructure/llm/: __init__.py  anthropic_adapter.py  llm_router.py  ollama_adapter.py  openai_adapter.py  prompt_loader.py  stub.py
tv-list-aggregator/src/tv_list_aggregator/infrastructure/llm/prompts/: classify.yaml  extract_program.yaml  normalize.yaml
tv-list-aggregator/src/tv_list_aggregator/infrastructure/persistence/: __init__.py  job_repository_impl.py  models.py  program_repository_impl.py  source_health_repository.py  source_repository_impl.py  sqlalchemy_base.py  user_repository_impl.py
tv-list-aggregator/src/tv_list_aggregator/infrastructure/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/: __init__.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/api/: app.py  deps.py  security.py  seed.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/api/middleware/: access_log.py  error_handler.py  rate_limit.py  request_id.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/api/routers/: __init__.py  admin.py  auth.py  channels.py  dashboard.py  export.py  health.py  jobs.py  metrics.py  programs.py  sources.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/api/schemas/: __init__.py  auth.py  channel.py  job.py  program.py  source.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/scheduler/: __init__.py  scheduler.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/scheduler/jobs/: __init__.py  cleanup_job.py  crawl_job.py  health_check_job.py
tv-list-aggregator/src/tv_list_aggregator/interfaces/web/: app.js  index.html  style.css
tv-list-aggregator/src/tv_list_aggregator/observability/: __init__.py  health.py  metrics.py
tv-list-aggregator/src/tv_list_aggregator/plugins/: __init__.py  registry.py
tv-list-aggregator/src/tv_list_aggregator/plugins/parsers/: __init__.py  base.py  html_parser.py  json_parser.py  llm_parser.py
tv-list-aggregator/src/tv_list_aggregator/plugins/sources/: __init__.py  base.py  html_scrape_source.py  http_json_source.py  m3u_source.py  rss_source.py
tv-list-aggregator/tests/: conftest.py
tv-list-aggregator/tests/e2e/: test_pipeline.py
tv-list-aggregator/tests/integration/api/: test_admin_router.py  test_auth_router.py  test_channels.py  test_dashboard_cache.py  test_error_handler_mapping.py  test_health_router.py  test_lifespan_bootstrap.py  test_metrics_endpoint.py  test_sources_router.py  test_sources_update.py  test_web_gui.py
tv-list-aggregator/tests/integration/persistence/: test_program_repository.py  test_repositories.py
tv-list-aggregator/tests/unit/core/: test_exceptions.py  test_settings.py
tv-list-aggregator/tests/unit/domain/models/: test_program.py
tv-list-aggregator/tests/unit/domain/ports/: test_ports_protocol.py
tv-list-aggregator/tests/unit/domain/services/: test_dedup.py  test_normalization.py
tv-list-aggregator/tests/unit/infrastructure/: test_http_client.py  test_llm_router.py
tv-list-aggregator/tests/unit/interfaces/scheduler/: test_scheduler.py
tv-list-aggregator/tests/unit/observability/: test_metrics.py
tv-list-aggregator/tests/unit/plugins/: test_registry.py
tv-list-aggregator/tests/unit/plugins/parsers/: test_parsers.py
tv-list-aggregator/tests/unit/scheduler/: test_crawl_job.py  test_health_check_job.py
(+1 files in other folders)
